--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
+    "firebase-admin": "^10.0.2",
     "mongodb": "^4.3.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "stripe": "^8.220.0"
   }
 }
