--- a/package.json
+++ b/package.json
@@ -4,20 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "start-dev": "nodemon index.js",
+    "start": "NODE_ENV=development nodemon app.js",
+    "prod": "NODE_ENV=production node app.js",
+    "start-dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^15.0.0",
+    "ejs": "^3.1.8",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
+    "express-validator": "^6.14.2",
     "firebase-admin": "^10.0.2",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongodb": "^4.3.1",
+    "mongoose": "^6.4.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15",
+    "socket.io": "^4.5.1",
     "stripe": "^8.220.0"
   }
 }
