--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development nodemon app.js",
-    "prod": "NODE_ENV=production node app.js",
+    "start": "node app.js",
     "start-dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
